[gd_scene load_steps=25 format=3]

[ext_resource type="Script" path="res://Scenes/WorldScenes/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ddeivusmwra44" path="res://Assets/Sprites/Character/Spritesheet.png" id="2"]
[ext_resource type="Theme" uid="uid://c36ywjvt5x7kl" path="res://Assets/GuiThemes/MainTheme.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://bx1yb2ywhu3c1" path="res://Assets/Gui/Chat_Bubble.png" id="4"]
[ext_resource type="AudioStream" uid="uid://v44h0p8c3o7f" path="res://Assets/Audio/footstep.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://bmv2it3joe8qx" path="res://Assets/Audio/jump.ogg" id="6"]
[ext_resource type="AudioStream" uid="uid://b0dgibbokbryy" path="res://Assets/Audio/clothingUpdate.ogg" id="7"]
[ext_resource type="AudioStream" uid="uid://cxw0xhwndc48j" path="res://Assets/Audio/Ground_Impact.ogg" id="8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(12, 28)
script = null

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:Hitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="3"]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}
script = null

[sub_resource type="Animation" id="4"]
resource_name = "falling"
length = 500.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}
script = null

[sub_resource type="Animation" id="5"]
resource_name = "hit"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:Hitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
script = null

[sub_resource type="Animation" id="6"]
resource_name = "hurt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}
script = null

[sub_resource type="Animation" id="7"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
script = null

[sub_resource type="Animation" id="8"]
resource_name = "jumping"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
script = null

[sub_resource type="Animation" id="9"]
resource_name = "walking"
length = 0.54
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}
script = null

[sub_resource type="AnimationLibrary" id="10"]
_data = {
"RESET": SubResource("2"),
"death": SubResource("3"),
"falling": SubResource("4"),
"hit": SubResource("5"),
"hurt": SubResource("6"),
"idle": SubResource("7"),
"jumping": SubResource("8"),
"walking": SubResource("9")
}
script = null

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(14, 30)
script = null

[sub_resource type="CircleShape2D" id="12"]
radius = 7.0
script = null

[sub_resource type="StyleBoxTexture" id="13"]
texture = ExtResource("4")
texture_margin_left = 3.0
texture_margin_right = 3.0
region_rect = Rect2(0, 0, 32, 16)
script = null

[sub_resource type="Animation" id="14"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
script = null

[sub_resource type="Animation" id="15"]
resource_name = "Zoom"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 0.287175),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
script = null

[sub_resource type="AnimationLibrary" id="16"]
_data = {
"RESET": SubResource("14"),
"Zoom": SubResource("15")
}
script = null

[node name="Player" type="CharacterBody2D" groups=[
"Players",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
one_way_collision = true
one_way_collision_margin = 2.0

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("2")
hframes = 33
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("10")
}

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = -125.0
offset_top = -36.0
offset_right = 125.0
offset_bottom = -13.0
theme = ExtResource("3")
bbcode_enabled = true
scroll_active = false

[node name="Clothing" type="Node2D" parent="."]

[node name="Back" type="Sprite2D" parent="Clothing"]
z_index = 2
hframes = 33

[node name="Pants" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Shoes" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Shirt" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hair" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Face" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hat" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hand" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Tool" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="HurtCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtCollider"]
shape = SubResource("11")
debug_color = Color(0.866667, 0.356863, 0, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
modulate = Color(0.94902, 0.294118, 0.913725, 1)

[node name="DropCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("12")
debug_color = Color(1, 1, 1, 0.419608)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(0, 20)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(7, 0)
target_position = Vector2(0, 20)

[node name="ChatBubble" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 12.0
offset_top = -17.0
offset_right = 19.0
offset_bottom = 3.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(-1, 10)
theme = ExtResource("3")
theme_override_styles/normal = SubResource("13")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChatTimer" type="Timer" parent="ChatBubble"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChatBubble"]
libraries = {
"": SubResource("16")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Listener2D" type="AudioListener2D" parent="."]

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
volume_db = -25.0
bus = &"Game"

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
volume_db = -30.0
bus = &"Game"

[node name="ClothingEditSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")
volume_db = -25.0
bus = &"Game"

[node name="LandSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")
volume_db = -80.0

[connection signal="timeout" from="ChatBubble/ChatTimer" to="." method="_on_chat_timer_timeout"]
